--- a/index.html
+++ b/index.html
@@ -44,30 +44,32 @@
 </nav>
 
 <!-- First Container -->
-<header class="front-page">
-<div class="front-body">
 
-<!--   <img src="./assets/images/landscape.jpeg" width="100%" height="100%"> -->
-<!--   <figure> 
-      <img src="assets/images/skyline.jpeg" width="100%" height="100%" /> 
-    </figure> 
+  <div class="background-pics">
+   <!--  <div id="background-pics"> -->
 
-    <figure> 
-      <img src="assets/images/suburbs.jpg" width="100%" height="100%" /> 
-    </figure> 
+<!--       <figure> 
+        <img src="assets/images/skyline.jpeg" width="100%" height="100%" /> 
+      </figure> 
 
-    <figure> 
-      <img src="assets/images/landscape.jpeg" width="100%" height="100%" /> 
-    </figure> 
+      <figure> 
+        <img src="assets/images/suburbs.jpg" width="100%" height="100%" /> 
+      </figure> 
 
-    <figure> 
-      <img src="assets/images/beach.jpeg" width="100%" height="100%"/> 
-    </figure>  -->
-  <div class="container" id="front-caption">
-  <h1 style="color:white; text-align: center">Full Stack Web Developer <br> Positive Ethusiast <br> Avid Traveler</h1>
+      <figure> 
+        <img src="assets/images/landscape.jpeg" width="100%" height="100%" /> 
+      </figure> 
+
+      <figure> 
+        <img src="assets/images/beach.jpeg" width="100%" height="100%"/> 
+      </figure>  -->
+
+      <div class="container margin" id="front-caption">
+      <h1 style="color:white; text-align: center">Full Stack Web Developer <br> Positive Ethusiast <br> Avid Traveler</h1>
+      </div>
+    <!-- </div> -->
   </div>
-</div>
-</header>
+
 
 <!-- Second Container -->
 <div id="about" class="container-fluid bg-2 text-center">
@@ -89,19 +91,19 @@
     <div class="col-sm-4">
       <h4>MAESTRO</h4>
       <p>Web Application that increases company productivity via improving company culture by connecting and engaging employees on a music platform.</p>
-      <a href="https://maestro-rs-al-ia.herokuapp.com"><img src="assets/images/maestro.png" class="img-responsive img-rounded margin" style="width:100%" alt="Maestro"></a>
+      <a href="https://maestro-rs-al-ia.herokuapp.com"><img src="assets/images/maestro.png" class="img-responsive img-rounded margin project-image" alt="Maestro"></a>
     </div>
     <div class="col-sm-4">
       <h4>NewYork Times APP</h4>
       <p>Easy-to-use informational news search platform that utilizes the NewYork Times API to display information based on user input.</p>
       <br>
-      <a href="https://dry-fortress-57474.herokuapp.com/"><img src="./assets/images/nytimes.png" class="img-responsive img-rounded margin" style="width:100%" alt="NYTIMES"></a>
+      <a href="https://dry-fortress-57474.herokuapp.com/"><img src="./assets/images/nytimes.png" class="img-responsive img-rounded margin project-image" alt="NYTIMES"></a>
     </div>
     <div class="col-sm-4">
       <h4>Music Trivia</h4>
       <p>Created a Music Trivia game playable in the browser.</p>
       <br>
-      <a href="https://trivia-music.herokuapp.com/"><img src="./assets/images/musictrivia.jpg" class="img-responsive img-rounded margin" style="width:100%" alt="MUSIC TRIVIA"></a>
+      <a href="https://trivia-music.herokuapp.com/"><img src="./assets/images/musictrivia.jpg" class="img-responsive img-rounded margin project-image" alt="MUSIC TRIVIA"></a>
     </div>
   </div>
 </div>
