editing media tags

--- a/index.html
+++ b/index.html
@@ -45,29 +45,11 @@
 
 <!-- First Container -->
 
-  <div class="background-pics">
-   <!--  <div id="background-pics"> -->
-
-<!--       <figure> 
-        <img src="assets/images/skyline.jpeg" width="100%" height="100%" /> 
-      </figure> 
-
-      <figure> 
-        <img src="assets/images/suburbs.jpg" width="100%" height="100%" /> 
-      </figure> 
-
-      <figure> 
-        <img src="assets/images/landscape.jpeg" width="100%" height="100%" /> 
-      </figure> 
-
-      <figure> 
-        <img src="assets/images/beach.jpeg" width="100%" height="100%"/> 
-      </figure>  -->
-
+  <div class="background-image">
+    <img  src="./assets/images/beach.jpeg" height="auto" width="100%">
       <div class="container margin" id="front-caption">
       <h1 style="color:white; text-align: center">Full Stack Web Developer <br> Positive Ethusiast <br> Avid Traveler</h1>
       </div>
-    <!-- </div> -->
   </div>
 
 
