--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
   <div class="background-image">
     <img  src="./assets/images/beach.jpeg" height="auto" width="100%">
-      <div class="container margin" id="front-caption">
-      <h1 style="color:white; text-align: center">Full Stack Web Developer <br> Positive Ethusiast <br> Avid Traveler</h1>
+      <div class="container" id="front-caption">
+      <h1 style="color:white; text-align: center">Full Stack Web Developer <br> Positive Enthusiast <br> Avid Traveler</h1>
       </div>
   </div>
 
@@ -95,7 +95,7 @@
 </div> -->
 
 <!-- Fifth Container(Contact)-->
-<div class="container-fluid bg-4 text-center" id="contact">    
+<div class="container-fluid bg-4 text-center">    
   <h3 class="margin">CONTACT</h3><br>
   <div id="contact-section" class="row">
     <!-- Contact Form -->
