--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
 <div id="about" class="container-fluid bg-2 text-center">
   <h3 class="margin">ABOUT ME</h3>
   <div class="row">
-    <div class="col-lg-4">
-      <img src="./assets/images/profilepic.jpg" class=" img-circle margin"  alt="Arron J. Linton" width="180px" height="300px">
-    </div>
-    <div class="col-lg-7">
+    <div class="offset-lg-1 col-lg-6" id="about_summary">
     <p>Passionate, determined, and creative Full Stack Web Developer with excellent customer service experience and work ethic. Excellent at working with diverse teams to achieve a common goal. Adept at conveying the value of complex technical information to an audience in a clear and understanding manner. Eagerness to learn new technologies. </p>
     </div>
+    <!-- <div class="offset-lg-1 col-lg-4">
+      <img src="./assets/images/profilepic.jpg" class=" img-circle margin"  alt="Arron J. Linton" width="180px" height="300px">
+    </div> -->
   </div>
+
 </div>
 
 <!-- Third Container (Grid) -->
