--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-default">
+<nav id="nav" class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -41,7 +41,7 @@
       </ul>
     </div>
   </div>
-</nav>
+</nav> <!-- End of Navigation -->
 
 <!-- First Container -->
 
@@ -56,15 +56,13 @@
 <!-- Second Container -->
 <div id="about" class="container-fluid bg-2 text-center">
   <h3 class="margin">ABOUT ME</h3>
-  <div class="row">
-    <div class="offset-lg-1 col-lg-6" id="about_summary">
-    <p>Passionate, determined, and creative Full Stack Web Developer with excellent customer service experience and work ethic. Excellent at working with diverse teams to achieve a common goal. Adept at conveying the value of complex technical information to an audience in a clear and understanding manner. Eagerness to learn new technologies. </p>
-    </div>
+  <div id="about-summary" class="row">
+    <p>Passionate, determined, and creative Full Stack Web Developer with excellent customer service experience and work ethic. Excellent at working with diverse teams to achieve a common goal. Adept at conveying the value of complex technical information to an audience in a clear and understanding manner. Eagerness to learn new technologies. 
+    </p>
     <!-- <div class="offset-lg-1 col-lg-4">
       <img src="./assets/images/profilepic.jpg" class=" img-circle margin"  alt="Arron J. Linton" width="180px" height="300px">
     </div> -->
   </div>
-
 </div>
 
 <!-- Third Container (Grid) -->
@@ -96,7 +94,7 @@
 </div> -->
 
 <!-- Fifth Container(Contact)-->
-<div class="container-fluid bg-4 text-center">    
+<div id="contact" class="container-fluid bg-4 text-center">    
   <h3 class="margin">CONTACT</h3><br>
   <div id="contact-section" class="row">
     <!-- Contact Form -->
