--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
-        <li><a href="">RESUME</a></li>
+        <li><a data-toggle="modal" data-target="#myModal" >RESUME</a></li>
         <li><a href="#projects">PROJECTS</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
@@ -131,6 +131,28 @@
         <a href="https://github.com/ArronJLinton"><img src="https://pbs.twimg.com/profile_images/616309728688238592/pBeeJQDQ.png" class="img-responsive img-rounded margin social"></a>
       </div>
     </div>
+  </div>
+</div>
+
+<!-- Modal -->
+
+<div id="myModal" class="modal fade" role="dialog">
+  <div id="modal" class="modal-lg modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <iframe width="100%" src="https://docs.google.com/document/d/1fV0CMFftg99JsFY4p_BQC-d9I540CLoIDSZJT-dBUso/edit#"></iframe>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
   </div>
 </div>
 
