--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div id="about" class="container-fluid bg-2 text-center">
   <h3 class="margin">ABOUT ME</h3>
   <div id="about-summary" class="row">
-    <p>First and foremost, I never thought I'd love applicantion development as much as I do now. I love the fact that web development is constantly evolving and in order to maintain relevancy in the field, you have to evolve with it. 
+    <p>First and foremost, I never thought I'd love application development as much as I do now. I love the fact that web development is constantly evolving and in order to maintain relevancy in the field, you have to evolve with it. 
     As a Full Stack Web Developer, I am passionate, determined, and full of creativity. My prior work experience has molded me into an excellent team player with great customer service experience and work ethic. I love working with a diverse team in order to achieve a common goal. Team members come from different cultural backgrounds and more specifically different technology environments; in this fashion, I am able pick everyones brain in effort to improve my technology stack and creativity.
     <br>
     Outside of coding, I love to enjoy myself (let's be honest, there's nothing better than enjoying yourself). You can find me dancing the night away, love meeting new people, and/or traveling across seas to uncharted lands. Secondly, I believe the greatest form of wealth is by having good mental and physical health. Coding is a challenge and I believe a healthly state of mind is required in order to tackle it head on. Lastly, but most important, I am a family man; family is everything.
