--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
+        <h4 class="modal-title">Arron J. Linton</h4>
       </div>
       <div class="modal-body">
-        <iframe width="100%" src="https://docs.google.com/document/d/1fV0CMFftg99JsFY4p_BQC-d9I540CLoIDSZJT-dBUso/pub?embedded=true"></iframe>
+        <iframe src="https://docs.google.com/document/d/1Q843MteYW_Ur4y8yIX6MUtfae7x3WRyClpCpRcOjjvM/pub?embedded=true" width="100%" height="500px"></iframe>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
