added materialize libaries

--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Linking W3Schools Library -->
-  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
   <!-- Linking Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Linking Google Fonts Stylesheet -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <!-- Materialized Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
   <!-- Linking CSS Style Sheet -->
   <link rel="stylesheet" href="./assets/css/style.css">
   <!-- Linking jQuery -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="./assets/javascript/app.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <!-- Materialized Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="./assets/javascript/app.js"></script>
 
 </head>
 <body data-spy="scroll" data-target=".navbar-fixed-top">
@@ -48,7 +52,7 @@
 <!-- First Container -->
 
   <div class="background-pics">
-<!--     <img  src="./assets/images/beach.jpeg" height="auto" width="100%"> -->
+    <img  src="./assets/images/beach.jpeg" height="auto" width="100%">
       <div class="container" id="front-caption">
       <h1 style="color:white; text-align: center">Full Stack Web Developer <br> Positive Enthusiast <br> Avid Traveler</h1>
       </div>
