--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body data-spy="scroll" data-target=".navbar-fixed-top">
 
 <!-- Navbar -->
-<nav id="nav" class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
+<nav id="nav" class="navbar transparent navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -51,10 +51,10 @@
 
 <!-- First Container -->
 
-  <div class="background-pics">
-    <img  src="./assets/images/beach.jpeg" height="auto" width="100%">
-      <div class="container" id="front-caption">
-      <h1 style="color:white; text-align: center">Full Stack Web Developer <br> Positive Enthusiast <br> Avid Traveler</h1>
+  <div class="parallax-container background-pics">
+    <div class="parallax"><img src="./assets/images/beach.jpeg"></div>
+      <div class=" parallax container" id="front-caption">
+      <h3 style="color:white; text-align: center">Full Stack Web Developer <br> Positive Enthusiast <br> Avid Traveler</h3>
       </div>
   </div>
 
