added another parallax

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <div class="parallax-container background-pics">
     <div class="parallax"><img src="./assets/images/beach.jpeg"></div>
-      <div class=" parallax container" id="front-caption">
+      <div class="parallax container" id="front-caption">
       <h3 style="color:white; text-align: center">Full Stack Web Developer <br> Positive Enthusiast <br> Avid Traveler</h3>
       </div>
   </div>
@@ -73,6 +73,10 @@
     </div> -->
   </div>
 </div>
+
+  <div class="parallax-container .background-pics">
+    <div class="parallax"><img src="./assets/images/skyline.jpeg"></div>
+  </div>
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
@@ -162,6 +166,7 @@
 
   </div>
 </div>
+
 
 <!-- Footer -->
 <footer class="container text-center">
