--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <body data-spy="scroll" data-target=".navbar-fixed-top">
 
 <!-- Navbar -->
-<nav id="nav" class="navbar transparent navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
-  <div class="container">
+<div class="container" id="navbar">
+  <nav class="navbar transparent navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -46,8 +46,8 @@
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
-  </div>
-</nav> <!-- End of Navigation -->
+  </nav>
+</div> <!-- End of Navigation -->
 
 <!-- First Container -->
 
