--- a/index.html
+++ b/index.html
@@ -146,24 +146,18 @@
 </div>
 
 <!-- Modal -->
-
-<div id="myModal" class="modal fade" role="dialog">
-  <div id="modal" class="modal-lg img-responsive modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Arron J. Linton</h4>
-      </div>
-      <div class="modal-body">
-        <iframe src="https://docs.google.com/document/d/1Q843MteYW_Ur4y8yIX6MUtfae7x3WRyClpCpRcOjjvM/pub?embedded=true" width="100%" height="500px"></iframe>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
+<div id="myModal" class="modal-lg modal modal-dialog fade img-responsive" role="dialog">
+   <!-- Modal content -->
+  <div class="modal-content">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal">&times;</button>
+      <h4 class="modal-title">Arron J. Linton</h4>
     </div>
 
+      <iframe src="https://docs.google.com/document/d/1Q843MteYW_Ur4y8yIX6MUtfae7x3WRyClpCpRcOjjvM/pub?embedded=true" width="100%" height="500px"></iframe>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    </div>
   </div>
 </div>
 
