--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <!-- Materialized Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
   <script type="text/javascript" src="./assets/javascript/app.js"></script>
 
 </head>
@@ -113,7 +114,7 @@
     <!-- Contact Form -->
     <div id="message-form" class="container">
     <h4>Message Me</h4>
-      <form>
+      <form id="message">
         <div class="form-group">
           <label class="control-label col-sm-2" for="name">Name</label>
           <input class="form-control" type="text" id="name" name="name" required="required">
@@ -126,7 +127,7 @@
             <label class="control-label col-sm-2" for="message">Message</label>
             <textarea class="form-control" id="message" name="message" required="required"></textarea>
         </div>
-        <button class="btn btn-primary" type="submit" value="submit">SUBMIT</button>
+        <button id="submit-message" class="btn btn-primary" type="submit" value="submit">SUBMIT</button>
       </form>
       
     </div>
