added contact caption

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin" id="projects" style="color:black">PROJECTS</h3><br>
+  <h3 class="margin" id="projects" style="color:black">PROJECTS</h3><
   <div class="row">
     <div class="col-sm-4">
       <h4>MAESTRO</h4>
@@ -103,13 +103,14 @@
   </div>
 </div>
 
-<!-- Fourth Container(Resume) -->
-<!-- <div class="container-fluid" id="resume">
-</div> -->
-
-<!-- Fifth Container(Contact)-->
+<!-- Fourth Container(Contact)-->
 <div id="contact" class="container-fluid bg-4 text-center">    
-  <h3 class="margin">CONTACT</h3><br>
+  <h3 class="margin">CONTACT</h3>
+  
+  <div id="contact-caption">
+    <p>I thoroughly enjoy meeting new people, sharing stories, learning about different cultures, etc. That said, please reach out if you'd like to talk tech, collaborate on projects, or just have a refreshing conversation. </p>
+    <p>Talk soon!</p>
+  </div> 
   <div id="contact-section" class="row">
     <!-- Contact Form -->
     <div id="message-form" class="container">
