added new url for maestro

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="col-sm-4">
       <h4>MAESTRO</h4>
       <p>Web Application that increases company productivity via improving company culture by connecting and engaging employees on a music platform.</p>
-      <a href="https://maestro-rs-al-ia.herokuapp.com"><img src="assets/images/maestro.png" class="img-responsive img-rounded margin project-image" alt="Maestro"></a>
+      <a href="https://maestro-music-app.herokuapp.com/index.html"><img src="assets/images/maestro.png" class="img-responsive img-rounded margin project-image" alt="Maestro"></a>
     </div>
     <div class="col-sm-4">
       <h4>NewYork Times APP</h4>
