--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
-        <li><a data-toggle="modal" data-target="#myModal" >RESUME</a></li>
+        <!-- <li><a data-toggle="modal" data-target="#myModal" >RESUME</a></li> -->
         <li><a href="#projects">PROJECTS</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
