added social links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Linking Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <!--Import Google Icon Font-->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Linking Google Fonts Stylesheet -->
@@ -27,7 +28,16 @@
 
 </head>
 <body data-spy="scroll" data-target=".navbar-fixed-top">
-
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- How To Add Font Awesome Social Icons In Blog Or Website3 -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-4017969662737344"
+       data-ad-slot="1819950113"
+       data-ad-format="auto"></ins>
+  <script>
+  // (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 <!-- Navbar -->
 <div class="container" id="navbar">
   <nav class="navbar transparent navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
@@ -44,6 +54,7 @@
         <li><a href="#about">ABOUT</a></li>
         <!-- <li><a data-toggle="modal" data-target="#myModal" >RESUME</a></li> -->
         <li><a href="#projects">PROJECTS</a></li>
+        <li><a href="#">RESUME</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -81,7 +92,7 @@
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin" id="projects" style="color:black">PROJECTS</h3><
+  <h3 class="margin" id="projects" style="color:black">PROJECTS</h3>
   <div class="row">
     <div class="col-sm-4">
       <h4>MAESTRO</h4>
@@ -123,17 +134,27 @@
 
     <h3>Arron J. Linton</h3>
     <h4>SOFTWARE ENGINEER + INSTRUCTOR</h4>
-    TECHNICAL SKILLS
+  
+  </div>
+  <!-- <div id="contact-caption">
+    <p>I thoroughly enjoy meeting new people, sharing stories, learning about different cultures, etc. That said, please reach out if you'd like to talk tech, collaborate on projects, or just have a refreshing conversation. </p>
+    <p>Talk soon!</p>
+  </div> -->
+
+  <div id="skills" class="container">
+    <h4>TECHNICAL SKILLS</h4>
     <p>PROFICIENT | JavaScript, TypeScript, React, GraphQL, Apollo, Node, Express, TypeORM, SQL, DataGrip, HTML5, CSS3, SASS, Redux, Jest, Sequelize, Postgres, Git & Github, Object-Oriented Programming, Functional Programming, Agile</p>
     <p>FAMILIAR | AWS, Looker, Python, React Testing Library, TestRail, Storybook, Babel, Webpack, Bootstrap, Enzyme, Mocha, Chai, Circle CI, Travis CI, Heroku, Docker, OAuth, Passport, Sockets, Stripe</p>
   </div>
-  <div id="contact-caption">
-    <p>I thoroughly enjoy meeting new people, sharing stories, learning about different cultures, etc. That said, please reach out if you'd like to talk tech, collaborate on projects, or just have a refreshing conversation. </p>
-    <p>Talk soon!</p>
-  </div> 
-  <div id="social-media-container" class=""">
-    <!-- <img src="./assets/images/social/github.png" alt="" srcset=""> -->
-  </div>
+
+  <!-- SOCIAL MEDIA ICONS -->
+  <div id="swdicons" align="center">
+    <a href="https://www.facebook.com/seowebsitedesigning" title="email" target="_blank" ><i class="fa fa-envelope-o"></i></a>
+    <a href="https://www.linkedin.com/company/seo-website-designing" title="Linkedin" target="_blank" ><i class="fa fa-linkedin"></i></a>
+    <a href="https://www.facebook.com/seowebsitedesigning" title="Github" target="_blank" ><i class="fa fa-github"></i></a>      
+    <a href="https://www.linkedin.com/company/seo-website-designing" title="Stack Overflow" target="_blank" ><i class="fa fa-stack-overflow"></i></a>
+    <a href="https://twitter.com/seodesigning" title="Twitter" target="_blank" ><i class="fa fa-twitter"></i></a>
+    </div>
 </div>
 
 <!-- Modal -->
@@ -154,8 +175,8 @@
 
 
 <!-- Footer -->
-<footer class="container text-center">
-  <div style="color:black; font-size: 12px;">
+<footer class="text-center">
+  <div class="copyright">
     &copy; Copyright 2020 Arron J. Linton
   </div>
 </footer>
