contact section updates

--- a/index.html
+++ b/index.html
@@ -143,12 +143,13 @@
 
   <div id="skills" class="container">
     <h4>TECHNICAL SKILLS</h4>
-    <p>PROFICIENT | JavaScript, TypeScript, React, GraphQL, Apollo, Node, Express, TypeORM, SQL, DataGrip, HTML5, CSS3, SASS, Redux, Jest, Sequelize, Postgres, Git & Github, Object-Oriented Programming, Functional Programming, Agile</p>
-    <p>FAMILIAR | AWS, Looker, Python, React Testing Library, TestRail, Storybook, Babel, Webpack, Bootstrap, Enzyme, Mocha, Chai, Circle CI, Travis CI, Heroku, Docker, OAuth, Passport, Sockets, Stripe</p>
+    <hr>
+    <p>PROFICIENT | React Native, React, JavaScript, TypeScript, Apollo, Node, Express, SQL, Mongo, HTML5, CSS3, Bootstrap, Jest, Sequelize, Mongoose, Git & Github, Object-Oriented Programming, Agile</p>
+    <p>FAMILIAR | Xcode, Android Studio, Microsoft App Center, Azure DevOps, Azure Portal, GraphQL, AWS, Python, React Testing Library, Babel, Webpack, Enzyme, Mocha, Chai, Travis CI, Heroku, Docker, OAuth, Passport, Sockets, Stripe</p>
   </div>
 
   <!-- SOCIAL MEDIA ICONS -->
-  <div id="swdicons" align="center">
+  <div id="social" align="center">
     <a href="https://www.facebook.com/seowebsitedesigning" title="email" target="_blank" ><i class="fa fa-envelope-o"></i></a>
     <a href="https://www.linkedin.com/company/seo-website-designing" title="Linkedin" target="_blank" ><i class="fa fa-linkedin"></i></a>
     <a href="https://www.facebook.com/seowebsitedesigning" title="Github" target="_blank" ><i class="fa fa-github"></i></a>      
